Projekt/K8S/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  selector:
    matchLabels:
      component: mongodb
  template:
    metadata:
      labels:
        component: mongodb
    spec:
      volumes:
      - name: mongodb-database
        persistentVolumeClaim:
          claimName: mongodb-persistent-volume-claim
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-database
          mountPath: /database/main
