Projekt/K8S/backend-ip-cluster.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-ip-cluster
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 5000
    targetPort: 5000
