Projekt/K8S/client-ip-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-ip-cluster
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
  - port: 3000
    targetPort: 3000
