Projekt/K8S/mongodb-ip-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-ip-cluster
spec:
  type: ClusterIP
  selector:
    component: mongodb
  ports:
  - port: 27017
    targetPort: 27017
