Projekt/K8S/redis-ip-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-ip-cluster
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
