Projekt/K8S/ingress-conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service: 
            name: client-ip-cluster
            port: 
              number: 3000
      - path: /app/?(.*)
        pathType: Prefix
        backend:
          service: 
            name: backend-ip-cluster
            port: 
              number: 5000
